--- a/Lint2015/Lint2015.vcxproj.filters
+++ b/Lint2015/Lint2015.vcxproj.filters
@@ -791,5 +791,8 @@
     <ClCompile Include="Helpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ListNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
